--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,5 @@
     "types": [ "webpack-env" ]
   },
   "exclude": [ "bin", "node_modules" ],
-  "atom": { "rewriteTsconfig": false },
-  "angularCompilerOptions": {
-    "strictMetadataEmit": true
-  }
+  "atom": { "rewriteTsconfig": false }
 }
